--- a/index.html
+++ b/index.html
@@ -5,24 +5,131 @@
         background-color: white;
         background-image: linear-gradient(
             45deg,
-            black 25%,
+            grey 25%,
             transparent 25%,
             transparent 74%,
-            black 75%,
-            black
+            grey 75%,
+            grey
           ),
           linear-gradient(
             45deg,
-            black 25%,
+            grey 25%,
             transparent 25%,
             transparent 74%,
-            black 75%,
-            black
+            grey 75%,
+            grey
           );
-        background-size: 6px 6px;
-        background-position: 0 0, 3px 3px;
+        background-size: 24px 24px;
+        background-position: 0 0, 12px 12px;
+      }
+      table {
+        background: white;
+      }
+      .cell {
+        width: 30px;
+        height: 30px;
+        border: 1px solid gray;
       }
     </style>
+
+    <meta charset="UTF-8" />
+    <script>
+      var pallets;
+
+      function loadJSON(callback) {
+        var xobj = new XMLHttpRequest();
+        xobj.overrideMimeType('application/json');
+        xobj.open('GET', 'pallets.json', true); // Replace 'my_data' with the path to your file
+        xobj.onreadystatechange = function() {
+          if (xobj.readyState == 4 && xobj.status == '200') {
+            // Required use of an anonymous callback as .open will NOT return a value but simply returns undefined in asynchronous mode
+            callback(xobj.responseText);
+          }
+        };
+        xobj.send(null);
+      }
+
+      function init() {
+        loadJSON(function(response) {
+          pallets = JSON.parse(response);
+          ReactDOM.render(
+            React.createElement(Control),
+            document.querySelector('#example'),
+          );
+        });
+      }
+    </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react-dom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.21.1/babel.min.js"></script>
+    <script type="text/babel">
+      /*React.createElement( type,  [props],  [...children] )*/
+      class Control extends React.Component {
+        constructor(props) {
+          super(props);
+          this.state = {};
+        }
+
+        render() {
+          return (
+            <table>
+              <thead>
+                <tr>
+                  <th>Id</th>
+                  <th>Colors</th>
+                  <th>Marks</th>
+                  <th>Description</th>
+                </tr>
+              </thead>
+              <tbody>
+                {pallets.map(i => (
+                  <ControlBar pallete={i} key={i.id} />
+                ))}
+              </tbody>
+            </table>
+          );
+        }
+      }
+
+      class ControlBar extends React.Component {
+        constructor(props) {
+          super(props);
+        }
+
+        render() {
+          return (
+            <tr>
+              <td>{this.props.pallete.id}</td>
+              <td style={{display: 'flex', flexDirection: 'row'}}>
+                {this.props.pallete.colors.map((i, c) => (
+                  <Cell color={i} key={c} />
+                ))}
+              </td>
+              <td>{this.props.pallete.marks}</td>
+              <td>{this.props.pallete.description}</td>
+            </tr>
+          );
+        }
+      }
+
+      class Cell extends React.Component {
+        constructor(props) {
+          super(props);
+          this.state = {};
+        }
+
+        render() {
+          return React.createElement(
+            'div',
+            {className: 'cell', style: {background: this.props.color}},
+            [],
+          );
+        }
+      }
+    </script>
   </head>
-  <body></body>
+  <body onload="init()">
+    <div id="example"></div>
+  </body>
 </html>
